# ADAM

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/adam-adapters/: Cargo.toml
crates/adam-adapters/src/: lib.rs
crates/adam-adapters/src/mcp/: mod.rs
crates/adam-adapters/src/rest/: mod.rs  workflow.rs
crates/adam-application/: Cargo.toml
crates/adam-application/src/: lib.rs
crates/adam-application/src/services/: asset_lifecycle.rs  asset_service.rs  config_cache.rs  major_upgrade.rs  mod.rs  state_propagator.rs  unpublish.rs  version_service.rs
crates/adam-application/src/services/workflow/: action_service.rs  agent_task_service.rs  approval_gate_service.rs  dead_letter_service.rs  event_service.rs  instance_service.rs  mod.rs  rule_evaluator.rs  rule_evaluator_tests.rs  rule_matching.rs
crates/adam-domain/: Cargo.toml
crates/adam-domain/src/: auth.rs  idempotency.rs  lib.rs  virtual_instance.rs
crates/adam-domain/src/asset/: asset_type.rs  instance.rs  mod.rs  state.rs  version.rs
crates/adam-domain/src/dependency/: boundary.rs  compiled.rs  dag.rs  mod.rs  rule.rs
crates/adam-domain/src/repository/: in_memory.rs  mod.rs
crates/adam-domain/src/version/: constraint.rs  mod.rs  semver.rs
crates/adam-domain/src/workflow/: action.rs  agent_task.rs  approval_gate.rs  conflict.rs  dead_letter.rs  error.rs  event.rs  idempotency.rs  in_memory.rs  instance.rs  mod.rs  repository.rs  rule.rs  state_machine.rs
crates/adam-domain/tests/: asset_state_test.rs  dag_validator_test.rs  dependency_boundary_test.rs  in_memory_repository_test.rs  version_constraint_integration_test.rs
crates/adam-infrastructure/: Cargo.toml
crates/adam-infrastructure/src/: lib.rs
crates/adam-infrastructure/src/repositories/: mod.rs  postgres.rs  workflow_postgres.rs
crates/adam-infrastructure/tests/: workflow_postgres.rs
crates/adam-server/: Cargo.toml
crates/adam-server/src/: main.rs
docs/: IMPLEMENTATION_PROGRESS.md  architecture.md  audit-report.md  implementation-plan.md  jenkins-integration-guide.md  openapi.yaml  rest-api.md  spec.md  system-overview-design.md  version-constraints.md
docs/diagrams/: batch-generate.py
docs/plans/: 2026-05-09-fix-plan.md  2026-05-18-alternative-architecture-analysis.md  2026-05-18-version-constraint-design.md  2026-05-18-version-constraint-implementation.md  2026-05-18-version-line-design.md  2026-05-18-version-line-implementation.md  2026-05-21-final-state-design.md  2026-06-15-asset-driven-workflow-automation-design.md  2026-06-15-work-item-kind-dependency-model.md  2026-06-18-workflow-automation-implementation-plan.md  progress.md
docs/reviews/: 2026-05-18-design-review-harsh.md
migrations/: 001_initial_organizations_projects.sql  002_asset_types_dependency_rules.sql  003_asset_instances.sql  004_asset_dependencies.sql  005_dirty_queue.sql  006_asset_versions_resolution_logs.sql  007_triggers_and_constraints.sql  008_add_missing_columns.sql  009_add_dirty_queue_since.sql  010_virtual_instances.sql  011_version_constraints.sql  012_default_dependency_rules.sql  013_work_item_kind_dependency_policy.sql  014_workflow_automation.sql
scripts/: cargo-msvc.sh
