[package]
name = "adam-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
adam-domain = { path = "../adam-domain" }
adam-application = { path = "../adam-application" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
