[package]
name = "adam-application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
adam-domain = { path = "../adam-domain" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
