[package]
name = "adam-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
