[package]
name = "adam-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
adam-domain = { path = "../adam-domain" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true, optional = true }

[features]
default = []
cache = ["dep:redis"]

[dev-dependencies]
tokio-test = { workspace = true }
